--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-awesome-reveal": "^3.7.1",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "17.0.2",
+    "react-masonry-css": "^1.0.16",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
